_sass/minima/_layout.scss
/**
 * Site header
 */
.site-header {
  // Positioning context for the mobile navigation icon
  position: fixed;
  width: 40vw;
  max-width: 1200px;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 2rem;
  align-self: flex-start;
  @include media-query($on-palm) { 
    padding-top: 50px;
    position:relative;
    height: 50vh;
    width: 100vw;
  }
}

.social-icons-wrapper {
  width: 80%;
  max-width: 600px;
  display: flex;
  flex-direction: row;
}

.header-social-logo {
  width: 8%;
  min-width: 30px;
  margin: 0 auto;
}

.header-logo {
  width: 70%;
  max-width: 700px;
  min-width: 250px;
}

.trigger {
  width: 80%;
}

.header-nav {
  width: 100%;
  display: flex;
  justify-content: space-between; // Even spacing between items
  flex-wrap: wrap;
  gap: 1rem; // Space between items

  @include media-query($on-palm) { 
    flex-direction: column;
    align-items: end;
    height: auto;
  }

  .page-link {
    @include relative-font-size(2);
    flex: 1 1 calc(30% - 0.75rem); // 4 items, with spacing accounted
    text-align: center;
    padding: 0.5rem;
    @include media-query($on-palm) { 
      text-align: right;
      padding: 0;
    }
  }
}

.site-title {
  display: flex;
  align-items: center;
  justify-content: center;
}

.site-nav {
  float: right;
  line-height: $base-line-height * $base-font-size * 2.25;
  display: flex;
  justify-content: center;

  .nav-trigger {
      display: none;
  }


  .menu-icon {
    display: none;
  }

  .page-link {
    color: $text-color;
    line-height: $base-line-height;
  }

  @include media-query($on-palm) {
    position: fixed;
    top: 12px;
    right: $spacing-unit / 2;
    background-color: black;
    border-radius: 10px;
    text-align: right;

    label[for="nav-trigger"] {
      display: block;
      float: right;
      width: 36px;
      height: 36px;
      z-index: 2;
      cursor: pointer;
    }

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      > svg {
        fill: white;
      }
    }

    input ~ .trigger {
      clear: both;
      display: none;
    }

    input:checked ~ .trigger {
      display: block;
      padding-bottom: 5px;
    }

    .page-link {
      display: block;
      padding: 0px 20px;
      color: white;

      &:not(:last-child) {
        margin-right: 0;
      }
      margin-left: 0px;
    }
  }
}



/**
 * Site footer
 */
.site-footer {
  border-top: 1px solid $grey-color-light;
  padding: $spacing-unit 0;
}

.footer-heading {
  @include relative-font-size(1.125);
  margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  @include relative-font-size(0.9375);
  color: $grey-color;
  margin-left: -$spacing-unit / 2;
  @extend %clearfix;
}

.footer-col {
  float: left;
  margin-bottom: $spacing-unit / 2;
  padding-left: $spacing-unit / 2;
}

.footer-col-1 {
  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
  width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
  width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
  width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
    width:         calc(50% - (#{$spacing-unit} / 2));
  }

  .footer-col-3 {
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}

@include media-query($on-palm) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}



/**
 * Page content
 */
.page-content {
  padding: $spacing-unit 0;
  flex: 1;
  width: min(60vw - 100vw - 1200px);
  margin-left: min(40vw, 1200px);
  @include media-query($on-palm) { 
    width: 100vw;
    margin: 0 0;
  }
}

.page-heading {
  @include relative-font-size(2);
}

.post-list-heading {
  @include relative-font-size(1.75);
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.post-link {
  display: block;
  @include relative-font-size(1.5);
}



/**
 * Posts
 */
.post-header {
  margin-bottom: $spacing-unit;
}

.post-title {
  @include relative-font-size(2.625);
  letter-spacing: -1px;
  line-height: 1;

  @include media-query($on-laptop) {
    @include relative-font-size(2.25);
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h2 {
    @include relative-font-size(2);

    @include media-query($on-laptop) {
      @include relative-font-size(1.75);
    }
  }

  h3 {
    @include relative-font-size(1.625);

    @include media-query($on-laptop) {
      @include relative-font-size(1.375);
    }
  }

  h4 {
    @include relative-font-size(1.25);

    @include media-query($on-laptop) {
      @include relative-font-size(1.125);
    }
  }
}

